# warp_cache

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  index.html  llms-full.txt  llms.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  publish.yml
benchmarks/: COMPARISON.md  _bench_runner.py  _generate_comparison_charts.py  _report_generator.py  _to_action_json.py  bench_all.sh  bench_sieve.py
benchmarks/results/: bench_default.json  bench_native_cpu.json  bench_optimized.json  bench_perf_test.json  bench_py3.12.json  bench_py3.13.json  bench_py3.13t.json  bench_py3129.json  bench_py3132t.json  bench_py3132t_nogil.json  bench_py3140a6.json  bench_seqlock.json  bench_sieve.json  bench_test.json
dev/bench/: data.js
docs/: ARCHITECTURE.md  alternatives.md  development.md  performance.md  usage.md
docs/superpowers/plans/: 2026-06-16-reentrancy-soundness.md
docs/superpowers/specs/: 2026-06-16-reentrancy-soundness-design.md
examples/: async_cache.py  basic.py  gunicorn_app.py  shared_memory.py  strategies.py  ttl.py
fast_cache/: __init__.py  _decorator.py  _strategies.py
src/: entry.rs  key.rs  lib.rs  serde.rs  shared_store.rs  shared_store_stub.rs  store.rs
src/shm/: hashtable.rs  layout.rs  lock.rs  mod.rs  ordering.rs  region.rs
src/strategies/: fifo.rs  lfu.rs  lru.rs  mod.rs  mru.rs
tests/: conftest.py  test_async.py  test_basic.py  test_complex_objects.py  test_introspection.py  test_raising_eq.py  test_reentrancy.py  test_shared_basic.py  test_shared_multiprocess.py  test_shared_realistic.py  test_strategies.py  test_stress.py  test_threading.py  test_ttl.py
warp_cache/: __init__.py  _decorator.py  _strategies.py  _warp_cache_rs.pyi
