[package]
name = "fast_cache_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_fast_cache_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
parking_lot = "0.12"
hashlink = "0.9"

[target.'cfg(not(target_os = "windows"))'.dependencies]
memmap2 = "0.9"
libc = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
