[package]
name = "warp_cache_rs"
version = "0.0.0"
edition = "2021"

[lib]
name = "_warp_cache_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.1", features = ["extension-module"] }
parking_lot = "0.12"
hashlink = "0.9"

[target.'cfg(not(target_os = "windows"))'.dependencies]
memmap2 = "0.9"
libc = "0.2"
ahash = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
