[package]
name = "warp_cache_rs"
version = "0.0.0"
edition = "2021"

[lib]
name = "_warp_cache_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
parking_lot = "0.12"
hashbrown = "0.15"

[target.'cfg(not(target_os = "windows"))'.dependencies]
memmap2 = "0.9"
libc = "0.2"
ahash = "0.8"

# Loom is only pulled in for the seqlock memory-ordering model (issue #40), built
# solely under `RUSTFLAGS="--cfg loom"`. It is absent from normal/release builds and CI.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(Py_GIL_DISABLED)', 'cfg(loom)'] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
